--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./55f68e1fbbfb3a97de3447dea15fbe28.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nike Store</title>
   </head>
